# ondevice-stt-android

./: .gitignore  .gitmodules  LICENSE  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni.c
app/src/main/java/com/example/sttondevice/: Denoiser.kt  MainActivity.kt  MainViewModel.kt  ModelManager.kt  Recorder.kt  StreamingTranscriber.kt
app/src/main/java/com/example/sttondevice/ui/theme/: Theme.kt
app/src/main/java/com/whispercpp/whisper/: LibWhisper.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
